Fixed dropdown clipping issue.

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -218,6 +218,7 @@
 }
 .panel-tabs .tab-content {
 	padding-top: 6px;
+	overflow: inherit;
 }
 
 .panel-tabs .tab-content > .panel {
